# openclaw-sdk

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  compaction-context.md  settings.json
.claude/context/: protocol-notes.md
.claude/hooks/: auto-format.py  protect-files.py
.claude/rules/: documentation.md  gateway-protocol.md  general.md  python-style.md  testing.md
.claude/skills/deploy-docs/: SKILL.md
.claude/skills/prepare-release/: SKILL.md
.claude/skills/release-check/: SKILL.md
.claude/skills/test-live-gateway/: SKILL.md
.claude/skills/update-docs/: SKILL.md
.claude/skills/verify-sdk/: SKILL.md
.claude/tasks/: TASK_TRACKER.md  phase-specs.md
.github/workflows/: docs.yml  publish.yml
docs/: changelog.md  index.md  protocol.md  quickstart.md  roadmap.md
docs/api/: agent.md  audit-billing.md  autonomous.md  callbacks.md  client.md  config.md  connectors.md  coordination.md  dashboard.md  data.md  evaluation.md  gateway.md  guardrails.md  managers.md  pipeline.md  plugins.md  resilience.md  tools.md  types.md  voice.md  workflows.md
docs/examples/: index.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: agents.md  alerting.md  audit.md  autonomous.md  billing.md  caching.md  callbacks.md  channels.md  command-center.md  conditional-pipelines.md  connectors.md  coordination.md  cost-tracking.md  dashboard.md  data-sources.md  deduplication.md  device-management.md  evaluation.md  fastapi.md  guardrails.md  integrations.md  mcp-servers.md  multitenancy.md  node-management.md  ops-management.md  pipelines.md  plugins.md  prompt-templates.md  prompt-versioning.md  scheduling.md  skills.md  sms-channel.md  streaming.md  structured-output.md  templates.md  tool-policy.md  tts.md  usage-analytics.md  voice.md  webhooks.md  (+1 more)
docs/overrides/: main.html
docs/plans/: 2026-02-21-docs-website-design.md  2026-02-21-v0.2-roadmap.md
docs/stylesheets/: extra.css
examples/: 01_hello_world.py  02_streaming.py  03_fastapi_backend.py  04_channel_config.py  05_tool_config.py  06_skills_clawhub.py  07_pipeline.py  08_structured_output.py  09_callbacks.py  10_cost_tracking.py
live-examples/clawforge/: README.md
live-examples/clawforge/backend/: .gitignore  main.py  requirements.txt
live-examples/clawforge/frontend/: package-lock.json  package.json
live-examples/command-center/: README.md  main.py  requirements.txt
live-examples/command-center/app/: __init__.py  gateway.py  routes_agents.py  routes_audit.py  routes_autonomous.py  routes_billing.py  routes_channels.py  routes_chat.py  routes_config.py  routes_connectors.py  routes_files.py  routes_guardrails.py  routes_health.py  routes_models.py  routes_observe.py  routes_ops.py  routes_pipelines.py  routes_schedules.py  routes_sessions.py  routes_templates.py  routes_tts.py  routes_webhooks.py  routes_workflows.py
live-examples/command-center/static/: index.html
src/openclaw_sdk/: __init__.py
src/openclaw_sdk/alerting/: __init__.py  manager.py  models.py  rules.py  sinks.py
src/openclaw_sdk/approvals/: __init__.py  manager.py
src/openclaw_sdk/audit/: __init__.py  logger.py  models.py  sinks.py
src/openclaw_sdk/autonomous/: __init__.py  goal_loop.py  models.py  orchestrator.py  watchdog.py
src/openclaw_sdk/billing/: __init__.py  engine.py  models.py
src/openclaw_sdk/cache/: __init__.py  base.py  embeddings.py  semantic.py
src/openclaw_sdk/callbacks/: handler.py
src/openclaw_sdk/channels/: __init__.py  config.py  manager.py  sms.py
src/openclaw_sdk/config/: __init__.py  manager.py
src/openclaw_sdk/connectors/: __init__.py  base.py  github.py  gmail.py  google_sheets.py  hubspot.py  jira.py  notion.py  salesforce.py  slack_connector.py  stripe_connector.py  zendesk.py
src/openclaw_sdk/coordination/: __init__.py  consensus.py  router.py  supervisor.py
src/openclaw_sdk/core/: __init__.py  agent.py  client.py  config.py  constants.py  conversation.py  dedup.py  exceptions.py  types.py
src/openclaw_sdk/dashboard/: __init__.py  app.py
src/openclaw_sdk/data/: __init__.py  base.py  mysql_source.py  postgres_source.py  sqlite_source.py  supabase_source.py
src/openclaw_sdk/devices/: __init__.py  manager.py
tests/: conftest.py
tests/integration/: test_full_live_gateway.py  test_protocol_gateway_integration.py  test_v02_gateway.py
tests/unit/: test_agent.py  test_agent_edge_cases.py  test_agent_new_methods.py  test_agent_tool_policy.py  test_agent_wait.py  test_alerting.py  test_approval_manager.py  test_async_helpers.py  test_audit.py  test_autonomous.py  test_batch.py  test_billing.py  test_cache.py  test_callbacks.py  test_channel_login.py  test_channels.py  test_circuit_breaker.py  test_client.py  test_client_new_methods.py  test_conditional_pipeline.py  test_config_manager.py  test_connectors.py  test_conversation.py  test_coordination.py  test_cost_tracker.py  test_dashboard.py  test_data_sources.py  test_dedup.py  test_device_manager.py  test_env_config.py  test_evaluation.py  test_exceptions.py  test_fastapi_integration.py  test_gateway_facade.py  test_guardrails.py  test_integrations.py  test_io_alignment.py  test_local_gateway.py  test_logging_utils.py  test_mcp_server.py  (+37 more)
(+138 files in other folders)
